[tool.poetry]
name = "music_bg_extra"
version = "0.1.0"
description = "Extra utils for music_bg"
readme = "README.md"
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow-SIMD = "^7.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
yesqa = "^1.2.3"
pytest = "^6.2.5"
wemake-python-styleguide = "^0.15.3"
black = "^21.9b0"
pre-commit = "^2.15.0"
autoflake = "^1.4"

[tool.poetry.plugins.mbg_processors]
box_blur = "music_bg_extra.processors.blur:box_blur"
gaussian_blur = "music_bg_extra.processors.blur:gaussian_blur"
circle = "music_bg_extra.processors.circle:circle"

[tool.poetry.plugins.mbg_variables]
uuid4 = "music_bg_extra.variables.uuid_gen:uuid4"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
